Order users list in the admin panel

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -5,11 +5,60 @@
     <table class="table table-hover table-bordered text-nowrap">
       <thead>
         <tr>
-          <th>Email</th>
-          <th class="text-center">Feeds</th>
-          <th class="text-center">Tokens</th>
-          <th class="text-center">Posts</th>
-          <th class="text-center">Last Seen</th>
+          <th>
+            <%= sortable_header(
+              column: "email",
+              title: "Email",
+              current_sort: params[:sort] || controller.default_sort_column,
+              current_direction: params[:direction] || controller.default_sort_direction,
+              path_params: {}
+            ) %>
+          </th>
+          <th>
+            <%= sortable_header(
+              column: "name",
+              title: "Name",
+              current_sort: params[:sort] || controller.default_sort_column,
+              current_direction: params[:direction] || controller.default_sort_direction,
+              path_params: {}
+            ) %>
+          </th>
+          <th class="text-center">
+            <%= sortable_header(
+              column: "feeds",
+              title: "Feeds",
+              current_sort: params[:sort] || controller.default_sort_column,
+              current_direction: params[:direction] || controller.default_sort_direction,
+              path_params: {}
+            ) %>
+          </th>
+          <th class="text-center">
+            <%= sortable_header(
+              column: "tokens",
+              title: "Tokens",
+              current_sort: params[:sort] || controller.default_sort_column,
+              current_direction: params[:direction] || controller.default_sort_direction,
+              path_params: {}
+            ) %>
+          </th>
+          <th class="text-center">
+            <%= sortable_header(
+              column: "posts",
+              title: "Posts",
+              current_sort: params[:sort] || controller.default_sort_column,
+              current_direction: params[:direction] || controller.default_sort_direction,
+              path_params: {}
+            ) %>
+          </th>
+          <th class="text-center">
+            <%= sortable_header(
+              column: "last_seen",
+              title: "Last Seen",
+              current_sort: params[:sort] || controller.default_sort_column,
+              current_direction: params[:direction] || controller.default_sort_direction,
+              path_params: {}
+            ) %>
+          </th>
         </tr>
       </thead>
       <tbody>
@@ -20,6 +69,9 @@
               <% if user.admin? %>
                 <span class="text-muted">(admin)</span>
               <% end %>
+            </td>
+            <td>
+              <%= user.name %>
             </td>
             <td class="text-center">
               <%= user.feeds_count %>
@@ -47,7 +99,7 @@
 
   <%= pagination_for @users,
                      collection_name: "users",
-                     path_helper: ->(page) { admin_users_path(page: page) } %>
+                     path_helper: ->(page) { admin_users_path(page: page, sort: params[:sort], direction: params[:direction]) } %>
 <% else %>
   <div class="text-center py-5">
     <p class="text-muted">No users found</p>
