Sort feeds table

--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -9,11 +9,51 @@
         <table class="table table-hover table-bordered">
           <thead>
             <tr>
-              <th>Name</th>
-              <th>Status</th>
-              <th>Target Group</th>
-              <th>Last Refresh</th>
-              <th>Recent Post</th>
+              <th>
+                <%= sortable_header(
+                  column: "name",
+                  title: "Name",
+                  current_sort: params[:sort] || controller.default_sort_column,
+                  current_direction: params[:direction] || controller.default_sort_direction,
+                  path_params: {}
+                ) %>
+              </th>
+              <th>
+                <%= sortable_header(
+                  column: "status",
+                  title: "Status",
+                  current_sort: params[:sort] || controller.default_sort_column,
+                  current_direction: params[:direction] || controller.default_sort_direction,
+                  path_params: {}
+                ) %>
+              </th>
+              <th>
+                <%= sortable_header(
+                  column: "target_group",
+                  title: "Target Group",
+                  current_sort: params[:sort] || controller.default_sort_column,
+                  current_direction: params[:direction] || controller.default_sort_direction,
+                  path_params: {}
+                ) %>
+              </th>
+              <th>
+                <%= sortable_header(
+                  column: "last_refresh",
+                  title: "Last Refresh",
+                  current_sort: params[:sort] || controller.default_sort_column,
+                  current_direction: params[:direction] || controller.default_sort_direction,
+                  path_params: {}
+                ) %>
+              </th>
+              <th>
+                <%= sortable_header(
+                  column: "recent_post",
+                  title: "Recent Post",
+                  current_sort: params[:sort] || controller.default_sort_column,
+                  current_direction: params[:direction] || controller.default_sort_direction,
+                  path_params: {}
+                ) %>
+              </th>
             </tr>
           </thead>
           <tbody>
@@ -61,7 +101,7 @@
 
       <%= pagination_for @feeds,
                          collection_name: "feeds",
-                         path_helper: ->(page) { feeds_path(page: page) } %>
+                         path_helper: ->(page) { feeds_path(page: page, sort: params[:sort], direction: params[:direction]) } %>
     <% else %>
       <div class="text-center py-5">
         <p>No feeds yet</p>
