--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -6,58 +6,22 @@
       <thead>
         <tr>
           <th>
-            <%= sortable_header(
-              column: "email",
-              title: "Email",
-              current_sort: params[:sort] || controller.default_sort_column,
-              current_direction: params[:direction] || controller.default_sort_direction,
-              path_params: {}
-            ) %>
+            <%= sortable_header(column: "email", title: "Email") %>
           </th>
           <th>
-            <%= sortable_header(
-              column: "name",
-              title: "Name",
-              current_sort: params[:sort] || controller.default_sort_column,
-              current_direction: params[:direction] || controller.default_sort_direction,
-              path_params: {}
-            ) %>
+            <%= sortable_header(column: "name", title: "Name") %>
           </th>
           <th class="text-center">
-            <%= sortable_header(
-              column: "feeds",
-              title: "Feeds",
-              current_sort: params[:sort] || controller.default_sort_column,
-              current_direction: params[:direction] || controller.default_sort_direction,
-              path_params: {}
-            ) %>
+            <%= sortable_header(column: "feeds", title: "Feeds") %>
           </th>
           <th class="text-center">
-            <%= sortable_header(
-              column: "tokens",
-              title: "Tokens",
-              current_sort: params[:sort] || controller.default_sort_column,
-              current_direction: params[:direction] || controller.default_sort_direction,
-              path_params: {}
-            ) %>
+            <%= sortable_header(column: "tokens", title: "Tokens") %>
           </th>
           <th class="text-center">
-            <%= sortable_header(
-              column: "posts",
-              title: "Posts",
-              current_sort: params[:sort] || controller.default_sort_column,
-              current_direction: params[:direction] || controller.default_sort_direction,
-              path_params: {}
-            ) %>
+            <%= sortable_header(column: "posts", title: "Posts") %>
           </th>
           <th class="text-center">
-            <%= sortable_header(
-              column: "last_seen",
-              title: "Last Seen",
-              current_sort: params[:sort] || controller.default_sort_column,
-              current_direction: params[:direction] || controller.default_sort_direction,
-              path_params: {}
-            ) %>
+            <%= sortable_header(column: "last_seen", title: "Last Seen") %>
           </th>
         </tr>
       </thead>
