Highlight current navigation menu item

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,17 +41,17 @@
             <%# Navigation links %>
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <%= link_to "Status", root_path, class: "nav-link #{'active' if current_page?(root_path)}" %>
+                <%= link_to "Status", status_path, class: "nav-link #{'active text-decoration-underline' if current_page?(status_path)}" %>
               </li>
               <li class="nav-item">
-                <%= link_to "Feeds", feeds_path, class: "nav-link #{'active' if current_page?(feeds_path) || controller_name == 'feeds'}" %>
+                <%= link_to "Feeds", feeds_path, class: "nav-link #{'active text-decoration-underline' if current_page?(feeds_path) || controller_name == 'feeds'}" %>
               </li>
               <li class="nav-item">
-                <%= link_to "Posts", posts_path, class: "nav-link #{'active' if current_page?(posts_path) || controller_name == 'posts'}" %>
+                <%= link_to "Posts", posts_path, class: "nav-link #{'active text-decoration-underline' if current_page?(posts_path) || controller_name == 'posts'}" %>
               </li>
               <% if policy(Event).index? %>
                 <li class="nav-item">
-                  <%= link_to "Admin Panel", admin_path, class: "nav-link #{'active' if current_page?(admin_path) || controller_name.start_with?('admin')}" %>
+                  <%= link_to "Admin Panel", admin_path, class: "nav-link #{'active text-decoration-underline' if current_page?(admin_path) || controller_name.start_with?('admin')}" %>
                 </li>
               <% end %>
             </ul>
