--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -1,3 +1,38 @@
-<div class="d-flex justify-content-between align-items-center mb-4">
-  <h1>Status</h1>
+<% content_for :title, "Status" %>
+
+<%= page_header "Status" %>
+
+<div class="row">
+  <div class="col-12">
+    <div class="list-group">
+      <div class="list-group-item">
+        <strong>Total feeds:</strong>
+        <%= @user.total_feeds_count %>
+      </div>
+
+      <div class="list-group-item">
+        <strong>Total imported posts:</strong>
+        <%= @user.total_imported_posts_count %>
+      </div>
+
+      <div class="list-group-item">
+        <strong>Total published posts:</strong>
+        <%= @user.total_published_posts_count %>
+      </div>
+
+      <div class="list-group-item">
+        <strong>Most recent post publication:</strong>
+        <% if @user.most_recent_post_published_at %>
+          <%= time_ago_in_words(@user.most_recent_post_published_at) %> ago
+        <% else %>
+          never
+        <% end %>
+      </div>
+
+      <div class="list-group-item">
+        <strong>Average posts per day (last week):</strong>
+        <%= @user.average_posts_per_day_last_week %>
+      </div>
+    </div>
+  </div>
 </div>
