--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -5,10 +5,13 @@
 <div class="row">
   <div class="col-12">
     <% if @user.total_feeds_count == 0 %>
-      <p class="mb-3">No active feeds yet.</p>
-      <p>
-        <%= link_to "Add your first feed", new_feed_path, class: "btn btn-primary btn-sm" %>
-      </p>
+      <div class="alert alert-light border">
+        <h5 class="alert-heading">Welcome to Feeder</h5>
+        <p class="mb-3">
+          This page shows statistics about your feeds and posts. Get started by adding your first feed to track and publish content automatically.
+        </p>
+        <%= link_to "Add your first feed", new_feed_path, class: "btn btn-primary" %>
+      </div>
     <% else %>
       <div class="list-group">
       <div class="list-group-item">
