--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -9,7 +9,7 @@
         Feeder helps you automatically share content from your favorite sources to Freefeed.
       </p>
       <p>
-        <strong>Getting started is easy:</strong>
+        <strong>Getting started:</strong>
       </p>
       <ol class="mb-4">
         <li class="mb-2">
