--- a/app/views/settings/email_updates/edit.html.erb
+++ b/app/views/settings/email_updates/edit.html.erb
@@ -14,7 +14,7 @@
 
       <div class="mb-3">
         <%= form.label :email_address, "New email:", class: "form-label fw-bold" %>
-        <%= form.email_field :email_address, value: "", class: "form-control", placeholder: "Enter new email address" %>
+        <%= form.email_field :email_address, value: "", class: "form-control", placeholder: "Enter new email address", autofocus: true %>
       </div>
 
       <div class="mt-4">
