--- a/app/views/feeds/_reposting_form.html.erb
+++ b/app/views/feeds/_reposting_form.html.erb
@@ -27,6 +27,7 @@
       <%= form.select :access_token_id, options_for_select(access_token_options, feed.access_token_id),
                       { prompt: "Choose access token..." },
                       { class: "form-select",
+                        autofocus: true,
                         data: { action: "change->groups#refresh", groups_target: "tokenSelect" } } %>
       <div class="form-text">Select the Freefeed access token to use for posting</div>
     <% else %>
