--- a/app/views/settings/password_updates/edit.html.erb
+++ b/app/views/settings/password_updates/edit.html.erb
@@ -9,7 +9,7 @@
     <%= form_with model: @user, url: settings_password_update_path, method: :patch, local: true do |form| %>
       <div class="mb-3">
         <%= form.label :current_password, "Current password:", class: "form-label fw-bold" %>
-        <%= form.password_field :current_password, class: "form-control", required: true %>
+        <%= form.password_field :current_password, class: "form-control", required: true, autofocus: true %>
       </div>
 
       <div class="mb-3">
