--- a/app/views/feeds/_reposting_form.html.erb
+++ b/app/views/feeds/_reposting_form.html.erb
@@ -1,5 +1,5 @@
 <%# locals: (feed:) %>
-<div class="card mt-3" data-controller="form-collapse">
+<div class="card mt-3" data-controller="form-collapse autofocus">
   <div class="card-header">
     <h5 class="card-title mb-0">Edit Reposting</h5>
   </div>
