--- a/app/views/feeds/_scheduling_form.html.erb
+++ b/app/views/feeds/_scheduling_form.html.erb
@@ -1,6 +1,6 @@
 <%# locals: (feed:) %>
 
-<div class="card mt-3" data-controller="form-collapse">
+<div class="card mt-3" data-controller="form-collapse autofocus">
   <div class="card-header">
     <h5 class="card-title mb-0">Edit Scheduling</h5>
   </div>
