--- a/app/views/feeds/_reposting_form.html.erb
+++ b/app/views/feeds/_reposting_form.html.erb
@@ -1,5 +1,5 @@
 <%# locals: (feed:) %>
-<div class="card mt-3" data-controller="form-collapse">
+<div class="card mt-3" data-controller="form-collapse autofocus">
   <div class="card-header">
     <h5 class="card-title mb-0">Edit Reposting</h5>
   </div>
@@ -27,6 +27,7 @@
       <%= form.select :access_token_id, options_for_select(access_token_options, feed.access_token_id),
                       { prompt: "Choose access token..." },
                       { class: "form-select",
+                        autofocus: true,
                         data: { action: "change->groups#refresh", groups_target: "tokenSelect" } } %>
       <div class="form-text">Select the Freefeed access token to use for posting</div>
     <% else %>
